--- a/publish/resources/css/sbe/contents.css
+++ b/publish/resources/css/sbe/contents.css
@@ -6,9 +6,9 @@
 
 /* select */
 [class^="inp_combo"] {display:inline-block;}
-[class^="inp_combo"] > button {display:block;text-align:left;}
+[class^="inp_combo"] > button {display:block;overflow:hidden;text-align:left;}
 [class^="inp_combo"] > button .combo_title {display:block;color:#777;}
-[class^="inp_combo"] > button .combo_title[aria-hidden="true"] {display:none;}
+/* [class^="inp_combo"] > button .combo_title[aria-hidden="true"] {display:none;} */
 
 /* tab */
 [class^="tab_list_wrap"] {margin:30px 0 0;}
