--- a/publish/resources/css/mbe/layout.css
+++ b/publish/resources/css/mbe/layout.css
@@ -22,7 +22,7 @@
 /*********************************************************************************************************
 	CONTAINER / CONTENTS
 *********************************************************************************************************/
-#container {padding:50px 0 0;}
+#container {padding:50px 20px 0;}
 
 /*********************************************************************************************************
 	FOOTER
