--- a/publish/_html/mbe/guide/css/guide.css
+++ b/publish/_html/mbe/guide/css/guide.css
@@ -33,7 +33,7 @@ input {line-height:normal;}
 html,body{
     -webkit-user-select:auto !important;
 }
-body {background:#FFF;padding:0 10px; margin:15px;}
+body {background:#FFF;padding:0; margin:0;}
 .service-con table {width:auto;min-width:980px;table-layout:fixed; border:1px solid #D9D9D9; border-right:none; border-collapse: collapse;}
 .service-con th {background:#faf4ec !important;border-bottom:1px solid #D9D9D9;border-right:1px solid #D9D9D9; font-size:11px; color:#202020; font-weight:normal;padding:3px 0 2px 0;border-top :4px solid #665c50}
 .service-con table tr:first-child th:first-child,
@@ -73,26 +73,22 @@ body {background:#FFF;padding:0 10px; margin:15px;}
 #contentWrapMain {  }
 #content { min-height: 500px; background: #fff; padding: 0 10px; }
 #siteNav .nav-area { float: right; margin: 35px 0 0 0; }
-#container { width: 100%; margin: 10px auto 0 auto; position: relative; }
+/* #container { width: 100%; margin: 10px auto 0 auto; position: relative; } */
 .service-con .tab-type1 .con { display:none; }
 .service-con .tab-type1 h3.hidden {margin-bottom:1rem;}
 .last_date { text-align:center; font-weight:bold; }
 .last_date.on { color:#fff; font-weight:bold; background:#f04f4f; }
 .design td { background:#eee; }
 td.d_on { color:#f04f4f; font-weight:bold; }
-@media screen and (max-width:414px) {
-	body {margin:15px 0;padding:0 20px;}
-	#content {padding:0;}
-}
 
 .service-con a:visited{color:blue;}
 .service-con a:active{color:red;}
 
 
-.guide_wrap {margin:0 auto; padding:1rem 10px;line-height:2rem;}
+.guide_wrap {padding:0;line-height:2rem;}
 .guide_wrap h1.gd {border-bottom:0.1rem solid #d9d9d9; padding-bottom:1rem; font-size:2rem; font-weight:bold;}
 .guide_wrap h2.gd2 {padding-bottom:0.5rem; padding-top:2rem; font-size:1.6rem; font-weight:bold;}
-.guide_wrap xmp{display:inline-block;margin:0;font-family:'NotoSans';font-size:13px;line-height:1.8rem;}
+.guide_wrap xmp{display:inline-block;margin:0;font-family:'NotoSans';font-size:13px;line-height:20px;}
 .guide_list {margin:0.5rem 0 1rem;}
 .guide_list li {position:relative; margin-top:0.5rem; padding-left:1rem;line-height:1.8rem;}
 .guide_list li:before {position:absolute; left:0; top:0.8rem; width:0.2rem; height:0.2rem; background:#000; content:'';}
@@ -115,7 +111,7 @@ td.d_on { color:#f04f4f; font-weight:bold; }
 .style_area:after{content:" ";display:block;height:0;clear:both;visibility:hidden;}
 /* .style_area .tit{font-size:1.6rem;color:#000;} */
 div.html_area{position:relative;background-color:#eee;margin-top:2.5rem;}
-div.html_area:before{content:'마크업 기본형';position:absolute;top:-1.5rem;left:0;background-color:#eee;padding:0.3rem 0.5rem;font-size:1.1rem;letter-spacing:-0.1rem;}
+div.html_area:before{content:'마크업 기본형';position:absolute;top:-1.5rem;left:0;background-color:#eee;padding:0.3rem 0.5rem;font-size:11px;line-height:15px;letter-spacing:-0.1rem;}
 ul.html_area{position:relative;padding-top:3rem;}
 ul.html_area:before{content:'추가 타입(복수 클래스 추가)';position:absolute;top:1.3rem;left:0;background-color:#f5f5f5;padding:0.3rem 0.5rem;font-size:1.1rem;letter-spacing:-0.1rem;}
 ul.html_area li{display:table;width:100%;background-color:#f5f5f5;padding:0.5rem;box-sizing:border-box;}
@@ -131,13 +127,6 @@ ul.html_area li em{display:table-cell;width:30%;}
 .guide_wrap h1.gd{margin-bottom:20px;}
 .gd3{margin:40px 0 15px;}
 .gd3:first-child{margin-top:0;}
-	
-#contents{margin-top:0 !important;}
 
-@media screen and (max-width: 600px),only handheld and (min-device-width: 600px){
-	.style_area{max-width:100%;}
-}
-@media screen and (min-width: 600px){
-    .guide_wrap{padding:1rem 2rem;}
-    .guide_box{padding:20px;}
-}
+.style_area button.btn_sample {display:block; width:100%; padding:10px 0; font-size:15px;line-height:20px; border:0.1rem solid #ccc; background:#fff;}
+.style_area button.btn_sample:active {border-color:red; color:red;}
