--- a/publish/resources/css/mbe/contents.css
+++ b/publish/resources/css/mbe/contents.css
@@ -15,10 +15,10 @@
 [class^="tab_list_wrap"]:first-child {margin:0;}
 [class^="tab_list_wrap"] .tab_list_inner {border-bottom:1px solid #000;}
 [class^="tab_list_wrap"] ul {display:flex;margin:0 0 -1px;}
-[class^="tab_list_wrap"] ul li {position:relative;min-width:160px;margin:0 -1px 0 0;border-radius:10px 10px 0 0;border:1px solid #d5d5d5;border-bottom:1px solid #000;}
+[class^="tab_list_wrap"] ul li {position:relative;margin:0 -1px 0 0;border-radius:10px 10px 0 0;border:1px solid #d5d5d5;border-bottom:1px solid #000;}
 [class^="tab_list_wrap"] ul li a,
-[class^="tab_list_wrap"] ul li button {display:block;box-sizing:border-box;width:100%;padding:10px 0;line-height:22px;font-size:14px;font-weight:600;color:#767676;text-align:center;border-radius:10px 10px 0 0;}
-[class^="tab_list_wrap"] ul li.active {border:1px solid #000;border-bottom:1px solid #fff;z-index:1;}
+[class^="tab_list_wrap"] ul li button {display:block;box-sizing:border-box;width:100%;padding:10px;line-height:22px;font-size:14px;font-weight:600;color:#767676;text-align:center;border-radius:10px 10px 0 0;}
+[class^="tab_list_wrap"] ul li.active {border:1px solid rgb(82, 78, 78);border-bottom:1px solid #fff;z-index:1;}
 [class^="tab_list_wrap"] ul li.disabled a,
 [class^="tab_list_wrap"] ul li.disabled button {pointer-events:none;background-color:#d5d5d5}
 
